--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
@@ -5,10 +5,11 @@
 </div>
 
 <div class="main">
+    
     <div class="top-row px-4">
-        <a href="/start" class="ml-md-auto">Hem</a>
+        <label>Inloggad som: @SetCurrentUser.FirstName @SetCurrentUser.LastName</label>
     </div>
-
+    
     <div class="content px-4 container">
         @Body
     </div>
