--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
@@ -1,16 +1,31 @@
 ﻿@inherits LayoutComponentBase
-
+@inject NavigationManager uriHelper
 <div class="sidebar">
     <NavMenu />
 </div>
 
 <div class="main">
-    
+
     <div class="top-row px-4">
         <label>Inloggad som: @SetCurrentUser.FirstName @SetCurrentUser.LastName</label>
+        <a class="btn btn-success" @onclick="@LogoutCurrentUser">Logout user</a>
     </div>
-    
+  
     <div class="content px-4 container">
         @Body
     </div>
 </div>
+
+@code{
+    public void LogoutCurrentUser()
+    {
+        SetCurrentUser.Id = 0;
+        SetCurrentUser.UserName = "";
+        SetCurrentUser.Password = "";
+        SetCurrentUser.FirstName = "";
+        SetCurrentUser.LastName = "";
+        SetCurrentUser.Phone = "";
+
+        uriHelper.NavigateTo("/");
+    }
+}
