--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_History/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_History/FetchData.razor
@@ -9,11 +9,11 @@
 
 <br>
 
-@if (nekadeOrders == null)
+@if (orderHistora == null)
 {
     <div class="spinner"></div>
 }
-else if (nekadeOrders.Count == 0)
+else if (orderHistora.Count == 0)
 {
     <div class="spinner"></div>
 }
@@ -34,7 +34,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (Orders order in nekadeOrders)
+            @foreach (Orders order in orderHistora)
             {
                 if (order.OrderStatus == OrderStatus.FAKTURA_SKICKAD)
                 {
@@ -57,12 +57,10 @@ else
 }
 @code {
 
-
-    public List<Orders> nekadeOrders { get; set; } = new List<Orders>();
-    public int CompletedToken { get; set; } = 1;
+    public List<Orders> orderHistora { get; set; } = new List<Orders>();
     protected override async Task OnInitializedAsync()
     {
-        nekadeOrders = await client.GetFromJsonAsync<List<Orders>>($"https://webapitodo20200919020315.azurewebsites.net/api/orders");
+        orderHistora = await client.GetFromJsonAsync<List<Orders>>($"https://webapitodo20200919020315.azurewebsites.net/api/orders");       
     }
 
 }
