--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
@@ -57,7 +57,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/NekadeOrders">
-                <span class="oi oi-inbox" aria-hidden="true"></span> <h5>Nekade ordrar</h5>
+                <span class="oi oi-inbox" aria-hidden="true"></span> Nekade ordrar
             </NavLink>
         </li>
         <li class="nav-item px-3">
