--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/StartPage/Login.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/StartPage/Login.razor
@@ -6,16 +6,14 @@
     <!DOCTYPE html>
 
     <meta charset="UTF-8">
-    @*<meta name="viewport" content="width=device-width, initial-scale=1">*@
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 
     <style>
         body, h1, h2, h3, h4, h5 {
-            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-            font-size: 15px;
+            font-family: "Raleway", sans-serif
         }
-       
     </style>
 
     @if (activeOrderView == null)
