--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderAcceptedPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderAcceptedPage.xaml
@@ -11,6 +11,13 @@
                                Invoked="AddInfoSwipe_Invoked" />
                 </SwipeItems>
             </SwipeView.RightItems>
+            <SwipeView.LeftItems>
+                <SwipeItems Mode="Reveal">
+                    <SwipeItem Text="Remove"
+                               BackgroundColor="Yellow"
+                               Invoked="MarkAsPendingSwipe_Invoked" />
+                </SwipeItems>
+            </SwipeView.LeftItems>
 
             <!--Content-->
 
