Removed unused code

--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/LogInPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/LogInPage.xaml
@@ -6,13 +6,10 @@
         <StackLayout>
             <StackLayout Orientation="Vertical"
                          VerticalOptions="CenterAndExpand">
-                <Entry Placeholder="Username" Margin="60, 10" />
-                <Entry Placeholder="Password" Margin="60, 10" />
+                <Entry x:Name="EntryUsername" Placeholder="Username" Margin="60, 10" />
+                <Entry x:Name="EntryPassword" Placeholder="Password" Margin="60, 10" />
                 <Button Text="Log In" Margin="60, 10" CornerRadius="15"
                         Clicked="LogIn_Clicked" />
-                
-           
-                
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
