Updated UI - Start

--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/LogInPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/LogInPage.xaml
@@ -1,15 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XamarinTodo.Pages.LogInPage">
+             x:Class="XamarinTodo.Pages.LogInPage"
+             BackgroundColor="#e6fff8">
     <ContentPage.Content>
         <StackLayout>
             <StackLayout Orientation="Vertical"
                          VerticalOptions="CenterAndExpand">
-                <Entry Placeholder="Username" Margin="60, 10" />
-                <Entry Placeholder="Password" Margin="60, 10" />
+                <Entry Placeholder="Username" Margin="60, 10" TextColor="#F5F5F5" />
+                <Entry Placeholder="Password" Margin="60, 10" TextColor="#F5F5F5" />
                 <Button Text="Log In" Margin="60, 10" CornerRadius="15"
-                        Clicked="LogIn_Clicked" />
+                        Clicked="LogIn_Clicked"
+                        BackgroundColor="White" />
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
