--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderOverviewPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderOverviewPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XamarinTodo.Pages.OrderOverviewPage">
+             x:Class="XamarinTodo.Pages.OrderOverviewPage"
+             BackgroundColor="#CFFFE5">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Mina Ordrar" HorizontalOptions="Center" FontSize="30" Margin="15" />
