--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderPendingPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderPendingPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XamarinTodo.Pages.OrderPendingPage">
+             x:Class="XamarinTodo.Pages.OrderPendingPage"
+             BackgroundColor="#e6fff8">
     <ContentPage.Content>
         <SwipeView>
             <SwipeView.RightItems>
