--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/LogInPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/LogInPage.xaml
@@ -9,7 +9,10 @@
                 <Entry x:Name="EntryUsername" Placeholder="Username" Margin="60, 10" />
                 <Entry x:Name="EntryPassword" Placeholder="Password" Margin="60, 10" IsPassword="True" />
                 <Button Text="Log In" Margin="60, 10" CornerRadius="15"
-                        Clicked="LogIn_Clicked" />
+                        Clicked="LogIn_Clicked"
+                        BackgroundColor="#53dc98"
+                        TextColor="White"
+                        FontAttributes="Bold" />
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
