--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderPendingPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderPendingPage.xaml
@@ -26,20 +26,23 @@
                 <StackLayout BackgroundColor="#53dc98" HeightRequest="100">
                     <Label Text="Order Information" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" FontSize="30" TextColor="white" FontAttributes="Bold" />
                 </StackLayout>
-
-                <StackLayout Padding="10">
-                    <Label x:Name="LabelCustomerName" FontSize="20" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Margin="0, 10" />
-                    <Label Text="Kontakt information" FontAttributes="Bold" FontSize="18" />
-                    <Label x:Name="LabelAdress" FontSize="18" />
-                    <Label x:Name="LabelContactPerson" FontSize="18" />
-                    <Label x:Name="LabelPhone" FontSize="18" />
-                </StackLayout>
-                <StackLayout Padding="10" HeightRequest="500" Margin="0, 0, 0, 20">
-                    <Label Text="Order Info" FontAttributes="Bold" FontSize="18" />
-                    <Label x:Name="LabelOrderInfo" FontSize="18" Margin="0, 0, 0, 10" />
-                    <Label Text="Beskrivning" FontAttributes="Bold" FontSize="18" />
-                    <Label x:Name="LabelOrderDescription" FontSize="18" />
-                </StackLayout>
+                <Frame BackgroundColor="#FDFD96" CornerRadius="5" Margin="15">
+                    <StackLayout>
+                        <StackLayout Padding="10">
+                            <Label x:Name="LabelCustomerName" FontSize="20" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Margin="0, 10" />
+                            <Label Text="Kontakt information" FontAttributes="Bold" FontSize="18" />
+                            <Label x:Name="LabelAdress" FontSize="18" />
+                            <Label x:Name="LabelContactPerson" FontSize="18" />
+                            <Label x:Name="LabelPhone" FontSize="18" />
+                        </StackLayout>
+                        <StackLayout Padding="10" HeightRequest="500" Margin="0, 0, 0, 20">
+                            <Label Text="Order Info" FontAttributes="Bold" FontSize="18" />
+                            <Label x:Name="LabelOrderInfo" FontSize="18" Margin="0, 0, 0, 10" />
+                            <Label Text="Beskrivning" FontAttributes="Bold" FontSize="18" />
+                            <Label x:Name="LabelOrderDescription" FontSize="18" />
+                        </StackLayout>
+                    </StackLayout>
+                </Frame>
             </StackLayout>
         </SwipeView>
     </ContentPage.Content>
